--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* ---fonts--- */
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* ---fonts--- */
+@font-face {
+  font-family: "Integral CF";
+  src: url("./assets/fonts/Fontspring-DEMO-integralcf-bold.otf");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "Averta Demo PE Cutted Demo";
+  src: url("./assets/fonts/FontsFree-Net-AvertaDemoPECuttedDemo-Regular.ttf");
+}
+
+/* ---tags--- */
+@layer base {
+  h1 {
+    @apply text-[40px];
+  }
+
+  h2 {
+    @apply text-[28px];
+  }
+
+  h4 {
+    @apply text-[20px];
+  }
 }
